# serde-redis

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  lib.rs
tests/: de.rs  ser.rs  serde.rs
