[package]
name = "serde_redis"
version = "0.3.0"
authors = [
    "Joe Wilm <joe@jwilm.com>",
    "b00f (@b00f)"
]
description = "Serde deserialization for redis-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ezex-io/serde-redis"
documentation = "https://docs.rs/serde-redis"
edition = "2024"

[dependencies]
redis = "0.31"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"
